[workspace]
members = [
    "day_1",
    "day_2",
    "day_3",
    "day_4",
    "day_5",
    "day_6",
    "day_7",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["Zachary Harrold"]
description = "Advent of Code 2023 Solutions"
edition = "2021"

[workspace.dependencies]
clap = { version = "4.4.10", features = ["derive"] }